Configuração de comentários a os anúncios + gem Ratyrate

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,14 @@
-== README
+## Dependências do projeto
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+* ImageMagick (https://www.imagemagick.org)
 
-Things you may want to cover:
+```
+sudo apt-get update
+sudo apt-get install imagemagick libmagickwand-dev
+```
+* Graphviz (https://www.graphviz.org) - Apenas para Ambiente de Desenvolvimento
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+```
+sudo apt-get update
+sudo apt-get install graphviz
+```
